[gd_scene load_steps=7 format=2]

[ext_resource path="res://Fonts/TitleFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/Background/bg-Sheet.png" type="Texture" id=2]
[ext_resource path="res://Shaders/shader_wavytext.gdshader" type="Shader" id=3]
[ext_resource path="res://Fonts/BigFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://Screens/screen_main.gd" type="Script" id=5]

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 3 )
shader_param/height = 20.0
shader_param/speed = 1.0
shader_param/frequency = 5.0

[node name="MainScreen" type="Node2D"]
script = ExtResource( 5 )

[node name="Bg-Sheet" type="Sprite" parent="."]
position = Vector2( 519, 379 )
scale = Vector2( 4.53611, 4.53611 )
texture = ExtResource( 2 )

[node name="RichTextLabel" type="Label" parent="."]
material = SubResource( 2 )
margin_left = 54.0
margin_top = 88.0
margin_right = 1019.0
margin_bottom = 311.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "MooN DrivE"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 258.0
margin_top = 332.0
margin_right = 798.0
margin_bottom = 737.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 540.0
margin_bottom = 405.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 63

[node name="PlayButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_right = 540.0
margin_bottom = 54.0
custom_colors/font_color_focus = Color( 0.87451, 0, 1, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Play"
flat = true

[node name="LeaderboardButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 117.0
margin_right = 540.0
margin_bottom = 171.0
custom_colors/font_color_focus = Color( 0.87451, 0, 1, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Leaderboard"
flat = true

[node name="SettingsButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 234.0
margin_right = 540.0
margin_bottom = 288.0
custom_colors/font_color_focus = Color( 0.87451, 0, 1, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Settings"
flat = true

[node name="ExitButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 351.0
margin_right = 540.0
margin_bottom = 405.0
custom_colors/font_color_focus = Color( 0.87451, 0, 1, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Exit"
flat = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/LeaderboardButton" to="." method="_on_LeaderboardButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
